<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anp="http://schemas.android.com/apk/res-auto">




    <group>

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/Settings"

            anp:showAsAction="never"
            />

    <item
        android:id="@+id/rss"
        android:orderInCategory="150"
        android:title="@string/RSS"
        android:icon="@drawable/ic_rss"
        anp:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/youtube"
        android:orderInCategory="200"
        android:title="@string/Rocket"
        android:icon="@drawable/ic_rocket"
        anp:showAsAction="ifRoom"
        />



</group>

</menu>